--- a/src/components/community/aq-community-createpost.html
+++ b/src/components/community/aq-community-createpost.html
@@ -168,6 +168,9 @@
             padding: 0;
             margin-top: 10px;
             margin-bottom: 10px;
+            max-height: 50px;
+            overflow: hidden;
+            overflow-y:scroll ;
         }
 
         .tags-container li {
