--- a/src/components/community/aq-community-postdetail-content.html
+++ b/src/components/community/aq-community-postdetail-content.html
@@ -99,6 +99,9 @@
         tag-element{
             margin-bottom: 10px;
         }
+        aq-backtest-detail-item{
+            --card-action-background-color:var(post-content-background-color,#fafafb);
+        }
     </style>
 
     <template>
