--- a/src/components/common/aq-backtest-detail-item.html
+++ b/src/components/common/aq-backtest-detail-item.html
@@ -120,8 +120,9 @@
         }
 
         .card-actions {
-            background-color: #fff;
+            background-color: var(--card-action-background-color,#fff);
             border:none;
+            border-radius: 4px;
         }
 
         paper-tabs {
