--- a/src/components/common/aq-tag-element.html
+++ b/src/components/common/aq-tag-element.html
@@ -10,13 +10,13 @@
             }
             .tag-content{
                 font-size: 12px;
-                color:#8a8c97;
+                color:var(--tag-content-color,#8a8c97);
                 font-family: 'Lato' , sans-serif;
                 font-weight: 400;
             }
             .tag-container{
                 padding: 0 5px;
-                background-color: #f2f2f2;
+                background-color: var(--tag-element-background-color,#f2f2f2);
                 border-radius: 2px;
                 margin-right: 15px;
                 padding-bottom:3px;
