--- a/src/components/community/aq-community-createpost.html
+++ b/src/components/community/aq-community-createpost.html
@@ -260,7 +260,7 @@
                 }
 
                 this.resetView();
-                this.fire('rt-changed', {route:"/dashboard/community/topics/"+this.newThreadId});
+                this.fire('rt-changed', {route:"/dashboard/community/"+this.newThreadId});
 
                 this.fire('iron-signal', {name:'post-added'});
             },
